--- a/agit/res/layout/latest_commit_view.xml
+++ b/agit/res/layout/latest_commit_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/branch_layout_root"
               android:orientation="vertical"
+              android:padding="8dip"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <TextView
@@ -9,5 +9,8 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Latest Commit:"/>
-
+	<com.madgag.agit.views.ObjectSummaryView
+         android:id="@+id/latest_commit"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"/>
 </LinearLayout>
