--- a/agit/res/layout/latest_commit_view.xml
+++ b/agit/res/layout/latest_commit_view.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:padding="8dip"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dip">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Latest Commit:"/>
-	<com.madgag.agit.views.ObjectSummaryView
+            android:textSize="12sp"
+            android:text="@string/latest_commit_title"/>
+	<com.madgag.agit.views.PrettyCommitSummaryView
          android:id="@+id/latest_commit"
          android:layout_width="fill_parent"
-         android:layout_height="wrap_content"/>
+         android:layout_height="wrap_content"
+         android:padding="20dip" />
 </LinearLayout>
