--- a/agit/res/layout/repo_list_item.xml
+++ b/agit/res/layout/repo_list_item.xml
@@ -14,6 +14,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
         android:layout_below="@id/repo_name"
+        android:paddingRight="6dip"
 		android:src="@drawable/commit" />
 	<TextView
 		android:id="@+id/commit_subject"
