--- a/agit/res/xml/sync_adapter.xml
+++ b/agit/res/xml/sync_adapter.xml
@@ -1,3 +1,4 @@
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="com.madgag.agit.sync"
-    android:accountType="com.madgag.agit.account"/>
+    android:accountType="com.madgag.agit.account"
+    android:supportsUploading="false" />
