--- a/agit/res/layout/branch_list_item.xml
+++ b/agit/res/layout/branch_list_item.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-    android:orientation="vertical"
 	android:padding="10dip">
-    <TextView
+    <ImageView
+        android:id="@+id/branch_icon"
+		android:layout_width="32dip"
+		android:layout_height="32dip"
+		android:src="@drawable/branch_icon" />
+	<TextView
 		android:id="@+id/branch_name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_marginTop="6dip"
+        android:layout_toRightOf="@id/branch_icon"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
     
-	<include layout="@layout/rev_commit_list_item" />
-</LinearLayout>
+	<com.madgag.agit.views.PrettyCommitSummaryView
+         android:id="@+id/latest_commit"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@id/branch_name"/>
+</RelativeLayout>
