Badass Android 2.1 (Eclair) support - fix TabHost NPE
Was getting an NPE at TabHost.dispatchWindowFocusChanged(TabHost.java:295)
for Android 2.1. Android 2.2 and greater has been fixed with this commit:

http://android.git.kernel.org/?p=platform/frameworks/base.git;a=blobdiff;f=core/java/android/widget/TabHost.java;h=412f817353a99054ab36234e1441b48c6c7ad820;hp=31920e764e6d25523b6dd5ffb1e4087d4d8fa3b0;hb=acdef59d66094f11da4a6f57194747dc06f73da2;hpb=159f0015418955501d8cf2744b0393db2e73f394

-which basically does a null-check in dispatchWindowFocusChanged()

Fix is to extend TabHost, and simply override the
dispatchWindowFocusChanged() method with a similar null-check.

--- a/agit/res/layout/commit_view.xml
+++ b/agit/res/layout/commit_view.xml
@@ -9,31 +9,31 @@
 		    android:id="@+id/actionbar"
 		    style="@style/ActionBar"
 	        />
-	<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabhost"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
+	<com.madgag.agit.views.FixEclairTabHost
+        android:id="@android:id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TabWidget android:id="@android:id/tabs"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="32dip"
-            android:paddingLeft="1dip"
-            android:paddingRight="1dip"
-            android:paddingTop="4dip"
-        />
+            android:layout_height="match_parent">
 
-        <FrameLayout android:id="@android:id/tabcontent"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-        />
-    </LinearLayout>
-</TabHost>
+            <TabWidget android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="32dip"
+                android:paddingLeft="1dip"
+                android:paddingRight="1dip"
+                android:paddingTop="4dip"
+            />
+
+            <FrameLayout android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+            />
+        </LinearLayout>
+    </com.madgag.agit.views.FixEclairTabHost>
 	
 		
 </LinearLayout>
