tweaks to Repo Viewer layout spacing

--- a/agit/res/layout/simple_summary_list_item.xml
+++ b/agit/res/layout/simple_summary_list_item.xml
@@ -17,7 +17,7 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@id/title"
         android:layout_alignLeft="@id/title"
-		android:textAppearance="?android:attr/textAppearanceSmall"
+		android:textSize="16dip"
         android:maxLines="2"
         android:ellipsize="end"
 	/>
