--- a/agit/res/layout/fetch_progress.xml
+++ b/agit/res/layout/fetch_progress.xml
@@ -8,17 +8,21 @@
 		<TextView android:id="@+id/operation_description"
 			android:layout_width="fill_parent" android:textStyle="bold"
 			android:layout_height="wrap_content" android:layout_alignParentTop="true"
-			android:textColor="#ff000000" />
+			android:textColor="#000" />
 		<TextView android:id="@+id/operation_long_url"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
             android:singleLine="true" android:ellipsize="middle"
+            android:textColor="#777"
 			android:layout_alignParentBottom="true" />
 	</LinearLayout>
 	<LinearLayout 
 		android:layout_width="fill_parent" android:layout_height="wrap_content" 
 		android:orientation="horizontal">
-		<ProgressBar android:id="@+id/status_progress" android:layout_weight="1"
-			android:layout_width="160dp" android:layout_height="wrap_content"
+		<ProgressBar
+            android:id="@+id/status_progress"
+            android:layout_weight="1"
+			android:layout_width="160dp"
+            android:layout_height="wrap_content"
 			style="?android:attr/progressBarStyleHorizontal"
 			android:progressDrawable="@android:drawable/progress_horizontal"
 			android:indeterminate="false"
@@ -29,8 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:textColor="#ff000000"
+            android:textColor="#000"
             android:ellipsize="middle"
+            android:singleLine="true"
 			android:layout_below="@id/status_progress" />
 	</LinearLayout>
 </LinearLayout>
