--- a/agit/res/layout/simple_summary_list_item.xml
+++ b/agit/res/layout/simple_summary_list_item.xml
@@ -6,20 +6,27 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
 >
 
+    <ImageView
+		android:id="@+id/rdt_icon"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" />
+
 	<TextView android:id="@+id/title"
+        android:layout_toRightOf="@id/rdt_icon"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+        android:paddingLeft="8dip"
 		android:textAppearance="?android:attr/textAppearanceLarge"
 	/>
 
 	<TextView android:id="@+id/detail"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/title"
-        android:layout_alignLeft="@id/title"
+		android:layout_below="@id/rdt_icon"
+
 		android:textSize="16dip"
-        android:maxLines="2"
+        android:maxLines="3"
         android:ellipsize="end"
-	/>
+	/> <!--android:layout_alignLeft="@id/title" -->
 
 </RelativeLayout>
