--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -15,13 +15,16 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="7dip" android:paddingRight="7dip"
+            android:paddingLeft="8dip" android:paddingRight="8dip"
             android:paddingTop="6dip" android:paddingBottom="6dip" >
 
             <com.madgag.agit.views.ObjectIdView android:id="@+id/commit_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:typeface="monospace" />
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:padding="4dip"
+                android:background="@drawable/single_line_frame"/>
 
             <LinearLayout android:id="@+id/commit_people_group"
                 android:orientation="horizontal"
