--- a/agit/res/values/colors.xml
+++ b/agit/res/values/colors.xml
@@ -4,6 +4,7 @@
 	<color name="textColor">#D333</color>
 	<color name="darkText">#333</color>
 	<color name="gitHubBlue">#4183C4</color>
+    <color name="blue_label">#4070B0</color>
 	<color name="addedText">#DDFFDD</color>
 	<color name="removedText">#FFDDDD</color>
     <color name="repoListHeader">#FFFACD</color>
