--- a/agit/res/layout/rev_commit_view.xml
+++ b/agit/res/layout/rev_commit_view.xml
@@ -10,7 +10,7 @@
 	<LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content"
 	android:background="@drawable/top_bar" android:orientation="horizontal"  android:gravity="right">
 	
-    <com.madgag.agit.DiffSliderView android:id="@+id/RevCommitDiffSlider"
+    <com.madgag.agit.diff.DiffSliderView android:id="@+id/RevCommitDiffSlider"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 	</LinearLayout>
 
