--- a/agit/res/layout/diff_seekbar_view.xml
+++ b/agit/res/layout/diff_seekbar_view.xml
@@ -5,12 +5,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="5dip"
+            android:paddingRight="4dip"
             android:textSize="8dp"
             android:text="@string/diff_seekbar_before"/>
     <SeekBar android:id="@+id/DiffPlayerSeekBar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:padding="4dip"
              android:progressDrawable="@drawable/diff_seekbar"
              android:minWidth="120dip" android:maxWidth="160dip"/>
     <TextView
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="8dip"
+            android:paddingLeft="4dip"
             android:paddingRight="5dip"
             android:text="@string/diff_seekbar_after"/>
 </merge>
