--- a/agit/res/menu/dashboard.xml
+++ b/agit/res/menu/dashboard.xml
@@ -6,6 +6,11 @@
             android:title="@string/clone_menu_option">
     </item>
     <item
+            android:id="@+id/open_repo"
+            android:title="@string/open_menu_option"
+            android:showAsAction="never">
+    </item>
+    <item
             android:id="@+id/about_app"
             android:showAsAction="never"
             android:title="@string/about_app_menu_option">
