Add welcome text to dashboard activity
Would be nice to have to the welcome message disappear as soon as the user
starts their first clone...

--- a/agit/res/values/styles.xml
+++ b/agit/res/values/styles.xml
@@ -27,6 +27,11 @@
         <item name="android:typeface">monospace</item>
     </style>
 
+    <style name="WelcomeText" parent="@android:style/TextAppearance">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">#cc000000</item>
+    </style>
+
     <style name="addedText" parent="@style/code">
         <item name="android:textColor">@color/addedText</item>
     </style>
