--- a/agit/res/values/colors.xml
+++ b/agit/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="addedText">#DDFFDD</color>
     <color name="removedText">#FFDDDD</color>
     <color name="repoListHeader">#FFFACD</color>
+    <color name="link_text">#ff33b5e5</color> <!-- 'holo_blue_light' -->
 
     <color name="executionbar_background_start">#f0f0f0</color>
     <color name="executionbar_background_end">#d0d0d0</color>
