set striped-red background for actionbar
This is similar-ish to the old theme - it doesn't do so well with grey
menu option drop-downs from the overflow list...

http://developer.android.com/design/style/color.html

--- a/agit/res/values/theme.xml
+++ b/agit/res/values/theme.xml
@@ -12,6 +12,8 @@
     </style>
 
     <style name="Widget.Styled.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
+        <item name="background">@drawable/actionbar_background</item>
+        <item name="android:background">@drawable/actionbar_background</item>
     </style>
 
     <style name="Widget.Styled.ActionBar.SuperTitle" parent="Widget.Styled.ActionBar">
