Replace pull-to-refresh code with Chris Bane's Android-PullToRefresh lib
This library is under active development and uses Maven, making it easier
for me as a potential contributor to get it building. It's also packaged
as an apklib making it easier to use without having to copy and paste code
into my own project.

Note that it was necessary to change the view's id from "@android:id/list"
to "@+id/pull_to_refresh_list_wrapper" to avoid this fatal error on screen
rotation:

E/AndroidRuntime(31031): java.lang.RuntimeException: Unable to start activity ComponentInfo{com.madgag.agit/com.madgag.agit.BranchViewer}: java.lang.IllegalArgumentException: Wrong state class, expecting View State but received class android.widget.AbsListView$SavedState instead. This usually happens when two views of different type have the same id in the same hierarchy. This view's id is id/list. Make sure other views do not use the same id.
E/AndroidRuntime(31031): 	at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:1956)
E/AndroidRuntime(31031): 	at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:1981)
E/AndroidRuntime(31031): 	at android.app.ActivityThread.handleRelaunchActivity(ActivityThread.java:3351)
E/AndroidRuntime(31031): 	at android.app.ActivityThread.access$700(ActivityThread.java:123)
E/AndroidRuntime(31031): 	at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1151)
E/AndroidRuntime(31031): 	at android.os.Handler.dispatchMessage(Handler.java:99)
E/AndroidRuntime(31031): 	at android.os.Looper.loop(Looper.java:137)
E/AndroidRuntime(31031): 	at android.app.ActivityThread.main(ActivityThread.java:4424)
E/AndroidRuntime(31031): 	at java.lang.reflect.Method.invokeNative(Native Method)
E/AndroidRuntime(31031): 	at java.lang.reflect.Method.invoke(Method.java:511)
E/AndroidRuntime(31031): 	at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:784)
E/AndroidRuntime(31031): 	at com.android.internal.os.ZygoteInit.ma

--- a/agit/res/layout/branch_view.xml
+++ b/agit/res/layout/branch_view.xml
@@ -7,7 +7,7 @@
               android:layout_height="fill_parent">
 
     <com.madgag.agit.RevCommitListView
-            android:id="@android:id/list"
+            android:id="@+id/pull_to_refresh_list_wrapper"
             android:fastScrollEnabled="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:cacheColorHint="#FFF"/>
