--- a/agit/res/layout/commit_view.xml
+++ b/agit/res/layout/commit_view.xml
@@ -5,31 +5,17 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
 
-    <com.madgag.android.views.FixEclairTabHost
-            android:id="@android:id/tabhost"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <TabWidget android:id="@android:id/tabs"
-                       android:layout_width="match_parent"
-                       android:layout_height="32dip"
-                       android:paddingLeft="1dip"
-                       android:paddingRight="1dip"
-                       android:paddingTop="4dip"
-                    />
-
-            <FrameLayout android:id="@android:id/tabcontent"
-                         android:layout_width="match_parent"
-                         android:layout_height="0dip"
-                         android:layout_weight="1"
-                    />
-        </LinearLayout>
-    </com.madgag.android.views.FixEclairTabHost>
+    <com.viewpagerindicator.TabPageIndicator
+            android:id="@+id/indicator"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            />
+    <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 
 
 </LinearLayout>
