--- a/agit/res/layout/actionbar_custom_title.xml
+++ b/agit/res/layout/actionbar_custom_title.xml
@@ -12,7 +12,7 @@
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:singleLine="true"
-                  android:ellipsize="end" />
+                  android:ellipsize="middle" />
         <TextView android:id="@+id/title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
@@ -20,6 +20,6 @@
                   android:layout_marginTop="@dimen/abs__action_bar_subtitle_top_margin"
                   android:layout_marginBottom="@dimen/abs__action_bar_subtitle_bottom_margin"
                   android:singleLine="true"
-                  android:ellipsize="end" />
+                  android:ellipsize="middle" />
     </LinearLayout>
 </LinearLayout>
