--- a/agit/res/menu/dashboard.xml
+++ b/agit/res/menu/dashboard.xml
@@ -11,6 +11,11 @@
             android:showAsAction="never">
     </item>
     <item
+            android:id="@+id/settings"
+            android:showAsAction="never"
+            android:title="@string/settings_app_menu_option">
+    </item>
+    <item
             android:id="@+id/about_app"
             android:showAsAction="never"
             android:title="@string/about_app_menu_option">
