--- a/agit/res/layout/settings_activity.xml
+++ b/agit/res/layout/settings_activity.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:title="@string/settings">
+<PreferenceScreen
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:title="@string/settings">
 
     <PreferenceCategory
             android:title="@string/settings_category_sync">
-
-        <EditTextPreference
-                android:key="setting_sync_frequency"
-                android:title="@string/setting_title_sync_frequency"
-                android:summary="@string/setting_instruction_sync_frequency"
-                android:inputType="number">
-        </EditTextPreference>
-
+        <ListPreference
+            android:key="setting_sync_frequency"
+            android:title="@string/setting_title_sync_frequency"
+            android:summary="@string/setting_instruction_sync_frequency"
+            android:entries="@array/setting_sync_choices"
+            android:entryValues="@array/setting_sync_choices_values"
+            android:dialogTitle="@string/setting_title_sync_frequency">
+         </ListPreference>
     </PreferenceCategory>
-
 </PreferenceScreen>
